--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 }
 
 html {
-  font-size: 18px;
+  font-size: 13px;
 }
 
 body {
@@ -34,3 +34,26 @@ img {
 }
 
 
+@media screen and (min-width: 600px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  html {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  html {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 1800px) {
+  html {
+    font-size: 22px;
+  }
+}
